hphp/hack/test/typecheck/expression_trees/shapes/shape_at_wrong.php.exp
ERROR: File "shape_at_wrong.php", line 9, characters 10-98:
Invalid return type (Typing[4110])
  File "shape_at_wrong.php", line 8, characters 36-45:
  Expected `int`
  File "expr_tree.php", line 504, characters 73-73:
    via this generic `T`
  File "expr_tree.php", line 107, characters 40-45:
  But got `string`
ERROR: File "shape_at_wrong.php", line 18, characters 5-41:
Too many arguments (expected 2 but got 3) (Typing[4105])
  File "Shapes.hhi", line 83, characters 28-29:
  Definition is here
ERROR: File "shape_at_wrong.php", line 21, characters 33-38:
Shape access requires a string literal, integer literal, or a class constant (Typing[4051])
ERROR: File "shape_at_wrong.php", line 24, characters 5-31:
Too few arguments (required 2 but got 1) (Typing[4104])
  File "Shapes.hhi", line 83, characters 28-29:
  Definition is here
ERROR: File "shape_at_wrong.php", line 27, characters 33-35:
You are calling `Shapes::at()` on a field known to not exist (Typing[4251])
  File "shape_at_wrong.php", line 5, characters 36-62:
  The field `x` is not defined in this shape
ERROR: File "shape_at_wrong.php", line 30, characters 5-33:
You are trying to access the method `__unwrap` but this is a string (Typing[4062])
  File "expr_tree.php", line 107, characters 40-45:
  Definition is here
